load("@rules_cc//cc:defs.bzl", "cc_binary")

exports_files(["libsunlark.c"])

#DEFINES = ["DEBUG", "DEBUG_PROPERTIES"]
DEFINES = ["DEBUG", "DEBUG_TRACE"]
#DEFINES = ["DEBUG_ATTR"]
#DEFINES = ["DEBUG"]
#DEFINES = []

cc_library(
    name  = "sunlark",
    visibility = ["//visibility:public"],
    # linkshared = 1,
    # linkstatic = 1,
    srcs  = [
        "libsunlark.c",
        "libsunlark.h",
        "sunlark_bindings.c",
        "sunlark_bindings.h",
        "sunlark_dispatcher.c",
        "sunlark_dispatcher.h",
        "sunlark_dispatcher_dyads.c",
        "sunlark_dispatcher_dyads.h",
        "sunlark_dispatcher_triads.c",
        "sunlark_dispatcher_triads.h",
        "sunlark_dispatcher_tetrads.c",
        "sunlark_dispatcher_tetrads.h",
        "sunlark_dispatcher_pentads.c",
        "sunlark_dispatcher_pentads.h",
        "sunlark_expressors.c",
        "sunlark_expressors.h",
        "sunlark_filters.c",
        "sunlark_filters.h",
        "sunlark_node.c",
        "sunlark_node.h",
        "sunlark_parsers.c",
        "sunlark_parsers.h",
        "sunlark_predicators.c",
        "sunlark_predicators.h",
        "sunlark_properties.c",
        "sunlark_properties.h",
        "sunlark_serializers.c",
        "sunlark_serializers.h",
    ],
    hdrs = ["sunlark.h"],
    defines = DEFINES,
    copts = select({
        # strdup is non-standard, not supported on linux in strict c11 mode
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-pedantic-errors",

        "-I$(GENDIR)/bindings/scheme",
        "-I$(GENDIR)/external/moonlark/binding/scheme",

        "-I", "$(GENDIR)/sealark",
        "-I", "$(GENDIR)external/moonlark/sealark",

        "-I", "vendored/logc",
        "-I", "external/moonlark/vendored/logc",

        "-I", "vendored/s7",
        "-I", "external/moonlark/vendored/s7",

        "-I", "vendored/uthash",
        "-I", "external/moonlark/vendored/uthash",
    ],
    deps = [
        "//bazel",
        "//sealark",
        "//vendored/logc",
        "//vendored/uthash",
        "//vendored/s7"
    ],
)

########
genrule(
    name = "mkhdrs",
    srcs = [
        "libsunlark.c",
        "sunlark_bindings.c",
        "sunlark_dispatcher.c",
        "sunlark_dispatcher_dyads.c",
        "sunlark_dispatcher_triads.c",
        "sunlark_dispatcher_tetrads.c",
        "sunlark_dispatcher_pentads.c",
        "sunlark_expressors.c",
        "sunlark_filters.c",
        "sunlark_node.c",
        "sunlark_parsers.c",
        "sunlark_predicators.c",
        "sunlark_properties.c",
        "sunlark_serializers.c",
        "//bazel:bazel_config.c",
        "//sealark:mkhdrs-export",
        "//vendored/uthash:utarray.h",
        "//vendored/uthash:utstring.h",
    ],
    outs = [
        "libsunlark.h",
        "sunlark_bindings.h",
        "sunlark_dispatcher.h",
        "sunlark_dispatcher_dyads.h",
        "sunlark_dispatcher_triads.h",
        "sunlark_dispatcher_tetrads.h",
        "sunlark_dispatcher_pentads.h",
        "sunlark_expressors.h",
        "sunlark_filters.h",
        "sunlark_node.h",
        "sunlark_parsers.h",
        "sunlark_predicators.h",
        "sunlark_properties.h",
        "sunlark_serializers.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location libsunlark.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location //vendored/makeheaders) \\",
        "    $(locations //vendored/uthash:utarray.h) \\",
        "    $(locations //vendored/uthash:utstring.h) \\",
        "    $(location //bazel:bazel_config.c) \\",
        "    $(location //sealark:mkhdrs-export) \\",
        "    $(location libsunlark.c) \\",
        "    $(location sunlark_bindings.c) \\",
        "    $(location sunlark_dispatcher.c) \\",
        "    $(location sunlark_dispatcher_dyads.c) \\",
        "    $(location sunlark_dispatcher_triads.c) \\",
        "    $(location sunlark_dispatcher_tetrads.c) \\",
        "    $(location sunlark_dispatcher_pentads.c) \\",
        "    $(location sunlark_expressors.c) \\",
        "    $(location sunlark_filters.c) \\",
        "    $(location sunlark_node.c) \\",
        "    $(location sunlark_parsers.c) \\",
        "    $(location sunlark_predicators.c) \\",
        "    $(location sunlark_properties.c) \\",
        "    $(location sunlark_serializers.c)",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["//vendored/makeheaders"],
    visibility = ["//visibility:public"]
)

########
genrule(
    name = "mkhdrs-export",
    srcs = [
        "libsunlark.c",
        "sunlark_bindings.c",
        "sunlark_dispatcher.c",
        "sunlark_dispatcher_dyads.c",
        "sunlark_dispatcher_triads.c",
        "sunlark_dispatcher_tetrads.c",
        "sunlark_dispatcher_pentads.c",
        "sunlark_expressors.c",
        "sunlark_filters.c",
        "sunlark_node.c",
        "sunlark_parsers.c",
        "sunlark_predicators.c",
        "sunlark_properties.c",
        "sunlark_serializers.c",
        "//bazel:bazel_config.c",
        "//sealark:mkhdrs-export",
        "//vendored/uthash:utarray.h",
    ],
    outs = [
        "sunlark.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location libsunlark.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location //vendored/makeheaders) -H \\",
        "    $(locations //vendored/uthash:utarray.h) \\",
        "    $(location //bazel:bazel_config.c) \\",
        "    $(location //sealark:mkhdrs-export) \\",
        "    $(location libsunlark.c) \\",
        "    $(location sunlark_bindings.c) \\",
        "    $(location sunlark_dispatcher.c) \\",
        "    $(location sunlark_dispatcher_dyads.c) \\",
        "    $(location sunlark_dispatcher_triads.c) \\",
        "    $(location sunlark_dispatcher_tetrads.c) \\",
        "    $(location sunlark_dispatcher_pentads.c) \\",
        "    $(location sunlark_filters.c) \\",
        "    $(location sunlark_expressors.c) \\",
        "    $(location sunlark_node.c) \\",
        "    $(location sunlark_parsers.c) \\",
        "    $(location sunlark_predicators.c) \\",
        "    $(location sunlark_properties.c) \\",
        "    $(location sunlark_serializers.c) \\",
        "    > $@",
    ]),
    tools = ["//vendored/makeheaders"],
    visibility = ["//visibility:public"]
)
