package(default_visibility = ["//visibility:public"])

config_setting(
    name = "debug",
    values = {"compilation_mode": "dbg"},
)

################################################################
config_setting(
    name = "linux",
    constraint_values = [
        "@platforms//os:linux",
    ]
)

config_setting(
    name = "linux_x64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ]
)

config_setting(
    name = "linux_debug",
    constraint_values = ["@platforms//os:linux"],
    values = {
        "compilation_mode": "dbg",
    },
)

config_setting(
    name = "linux_opt",
    constraint_values = ["@platforms//os:linux"],
    values = {
        "compilation_mode": "opt"
    },
)

config_setting(
    name = "linux_fastbuild",
    constraint_values = ["@platforms//os:linux"]
)

################################################################
config_setting(
    name = "macos",
    constraint_values = ["@platforms//os:macos"]
)

## FIXME: should be based on compiler, not os, e.g. clang_debug v. gcc_debug
##  @local_config_cc//:cc-compiler-darwin_x86_64
config_setting(
    name = "macos_debug",
    constraint_values = [
        # "@local_config_cc//:cc-compiler-darwin_x86_64"
        "@platforms//os:macos"
    ],
    values = {
        # "@bazel_tools//tools/cpp:toolchain_type": "@local_config_cc//:cc-compiler-darwin_x86_64",
        "compilation_mode": "dbg"
    },
)

config_setting(
    name = "macos_opt",
    constraint_values = ["@platforms//os:macos"],
    values = {"compilation_mode": "opt"}
)

config_setting(
    name = "macos_fastbuild",
    constraint_values = ["@platforms//os:macos"]
)

config_setting(
    name = "m32",
    constraint_values = [
        "@platforms//cpu:x86_32",
    ]
)

config_setting(
    name = "m64",
    constraint_values = [
        "@platforms//cpu:x86_64",
    ]
)
