load("@rules_cc//cc:defs.bzl", "cc_library")

test_suite(
    name = "sys",
    tests = [
        ":moonlark",
        ":starlark",
    ])

cc_test(
    name = "moonlark",
    linkstatic = 1,
    srcs = [
        "test_moonlark.c",
        "test_moonlark.h",
        "moonlark_roundtrip.c",
        "moonlark_roundtrip.h",
        "//moonlark:config.c",
        "//moonlark:config.h",
    ],
    data = [ # NB: globbing does not seem to work
        "//test/lua:serialize.lua",

        "//test/data/android:BUILD.test",
        "//test/data/cpp:BUILD.test",
        "//test/data/filegroup:BUILD.bazel",
        "//test/data/gen:BUILD.bazel",
        "//test/data/load/aliases/test1:BUILD.test",
        "//test/data/load/aliases/test2:BUILD.test",
        "//test/data/load/comments:BUILD.test",
        "//test/data/load/test1:BUILD.test",
        "//test/data/load/test2:BUILD.test",
        "//test/data/load/test3:BUILD.test",
        "//test/data/python:BUILD.bazel",
        "//test/data/python/native:BUILD.test",
        "//test/data/shell:BUILD.bazel",
        "//test/data/windows/dll:BUILD.test",
    ],
    copts = select({
        # strdup is non-standard, not supported on linux in strict c11 mode
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-pedantic-errors",

        "-I$(GENDIR)/test/sys",
        "-I$(GENDIR)/external/moonlark/test/sys",

        "-I$(GENDIR)/src/lib/lbazel",

        "-I$(GENDIR)/moonlark",
        "-I$(GENDIR)/external/moonlark/moonlark",

        "-I$(GENDIR)/moonlark",

        "-I", "$(GENDIR)/src/lib/starlark",
        "-I", "$(GENDIR)external/moonlark/src/lib/starlark",

        "-I", "$(GENDIR)/src/lib/moonlark",
        "-I", "$(GENDIR)/external/moonlark/src/lib/moonlark", # libmoonlark.h

        "-Ivendored/logc",
        "-Iexternal/moonlark/vendored/logc",

        "-I", "vendored/lua-5.4.3/src",
        "-I", "external/moonlark/vendored/lua-5.4.3/src",

        "-Ivendored/unity",
        "-Iexternal/moonlark/vendored/unity",

        "-I", "vendored/uthash",
        "-I", "external/moonlark/vendored/uthash",
    ],
    deps = [
        # "//moonlark:config",
        # "//src/lib/lbazel",
        "//src/lib/moonlark",
        "//vendored/logc",
        "//vendored/unity",
        "//vendored/uthash",
        # pulled in by moonlark
        # "//vendored/lua-5.4.3/src:lua",
    ],
)

cc_test(
    name = "starlark",
    srcs = [
        "test_starlark.c",
        "test_starlark.h",
        "starlark_roundtrip.c",
        "starlark_roundtrip.h",
    ],
    data = [ # NB: globbing does not seem to work
        "//test/data/android:BUILD.bazel",
        "//test/data/cpp:BUILD.bazel",
        "//test/data/filegroup:BUILD.bazel",
        "//test/data/gen:BUILD.bazel",
        "//test/data/load/aliases/test1:BUILD.bazel",
        "//test/data/load/aliases/test2:BUILD.bazel",
        "//test/data/load/comments:BUILD.bazel",
        "//test/data/load/test1:BUILD.bazel",
        "//test/data/load/test2:BUILD.bazel",
        "//test/data/load/test3:BUILD.bazel",
        "//test/data/python:BUILD.bazel",
        "//test/data/python/native:BUILD.bazel",
        "//test/data/shell:BUILD.bazel",
        "//test/data/windows/dll:BUILD.bazel",
    ],
    copts = select({
        # strdup is non-standard, not supported on linux in strict c11 mode
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-pedantic-errors",

        "-I$(GENDIR)/src/lib/starlark",
        "-I$(GENDIR)/test/sys",
        "-Ivendored/logc",
        "-Ivendored/unity",

        "-I", "vendored/uthash",
        "-I", "external/moonlark/vendored/uthash",
    ],
    deps = [
        "//src/lib/starlark",
        "//vendored/logc",
        "//vendored/unity",
        "//vendored/uthash",
    ],
)

################################################################
genrule(
    name = "mkhdrs",
    srcs = [
        "//moonlark:config.c",
        "//src/lib/starlark:debug.c",
        "//src/lib/lbazel:lbazel.c",
        "moonlark_roundtrip.c",
        "starlark_roundtrip.c",
        "test_starlark.c",
        "test_moonlark.c"

        # "lex_keywords.c",
        # "lex_numbers.c",
        # "lex_punctuation.c",
        # "lex_strings.c",
        # "syntax_call_expr.c",
        # "syntax_dict.c",
        # "syntax_expressions.c",
        # "syntax_lists.c",
        # "syntax_slices.c",
        # "syntax_statements.c",
        # "lex_file.c",
        # "lua_file.c",
        # "parse_file.c",
    ],
    outs = [
        "moonlark_roundtrip.h",
        "starlark_roundtrip.h",
        "test_moonlark.h",
        "test_starlark.h",
        # "lex_keywords.h",
        # "lex_numbers.h",
        # "lex_punctuation.h",
        # "lex_strings.h",
        # "syntax_call_expr.h",
        # "syntax_dict.h",
        # "syntax_expressions.h",
        # "syntax_lists.h",
        # "syntax_slices.h",
        # "syntax_statements.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location starlark_roundtrip.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location //vendored/makeheaders) \\",
        "    $(location //moonlark:config.c) \\",
        "    $(location //src/lib/lbazel:lbazel.c) \\",
        "    $(location //src/lib/starlark:debug.c) \\",
        "    $(location moonlark_roundtrip.c) \\",
        "    $(location starlark_roundtrip.c) \\",
        "    $(location test_starlark.c) \\",
        "    $(location test_moonlark.c)",
        # "    $(location lex_keywords.c) \\",
        # "    $(location lex_numbers.c) \\",
        # "    $(location lex_punctuation.c) \\",
        # "    $(location lex_strings.c) \\",
        # "    $(location syntax_call_expr.c) \\",
        # "    $(location syntax_dict.c) \\",
        # "    $(location syntax_expressions.c) \\",
        # "    $(location syntax_lists.c) \\",
        # "    $(location syntax_slices.c) \\",
        # "    $(location syntax_statements.c)",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["//vendored/makeheaders"],
    visibility = ["//visibility:public"]
)
